* 2014-04-02 - thorben.betten@open-xchange.com

 - Fix for bug 31856: Changed log level for a failed update task to ERROR
 - Fix for bug 31864: Added separate property to disable Hazelcast-based session storage

* 2014-04-02 - ioannis.chouklis@open-xchange.com

 - Fix for Bug 31855: [L3] email cannot be displayed and customer gets only a MSG-0020

* 2014-04-02 - jan.bauerdick@open-xchange.com

 - Fix for bug 30835: Compare ISO 639-1 codes

* 2014-04-02 - lars.hoogestraat@open-xchange.com

 - Fix for bug 30766: Fixed copy of message uids if uidplus is missing

* 2014-04-01 - jan.bauerdick@open-xchange.com

 - Fix for bug 29758: Extracted CLT parts from c.o.control to new project c.o.control.clt & let CLT do help output before connecting to
                      server

* 2014-04-01 - ioannis.chouklis@open-xchange.com

 - Fix for bug 31821: Properly sanitize E-Mail's CSS content to not affect App Suite UI's CSS scope

* 2014-04-01 - thorben.betten@open-xchange.com

 - Fix for bug 31217: No translation of standard folders for external accounts + prefer localized standard folder names than taking the ones
                      from primary account (as they might get translated)

* 2014-03-31 - thorben.betten@open-xchange.com
 
 - Fix for bug 31816: Support SMTP server that do not support authentication capability
 - Fix for bug 31809: Enhanced key associated with an IMAP store cache by dedicated user information

* 2014-03-31 - martin.herfurth@open-xchange.com

 - Fix for bug 31810: Bad conflict handling on update.

* 2014-03-30 - thorben.betten@open-xchange.com

 - Fix for bug 31648: Detect Content-Type by file name if specified one is of generic nature; e.g "application/binary"
 - Fix for bug 31005: Check every incoming JSON request payload if it contains an empty JSON array

* 2014-03-28 - martin.schneider@open-xchange.com

 - Fix for bug 31795: Do not check capability if session is anonymous
 - Fix for bug 31805: Translate task priority in notifications
