@@ -1,3 +1,7 @@
+* 2014-04-02 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 31779: Wrong created-by on change exception creation.
+
 * 2014-04-02 - thorben.betten@open-xchange.com
 
  - Fix for bug 31856: Changed log level for a failed update task to ERROR
